Add backend error display

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,10 @@
       src="https://kit.fontawesome.com/9c4d41a0b2.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
