--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="%PUBLIC_URL%/favicon.png"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React Template</title>
     <script
