Fix checkout button

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,7 @@
       href="%PUBLIC_URL%/favicon.png"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React Template</title>
+    <title>Ryamazon</title>
     <script
       src="https://kit.fontawesome.com/9c4d41a0b2.js"
       crossorigin="anonymous"
